--- a/src/app/components/selfattendance/selfattendance.component.html
+++ b/src/app/components/selfattendance/selfattendance.component.html
@@ -5,8 +5,7 @@
     </header>
     <br>
     <br>
-    <button class="btn btn-primary adduser" type="button" (click)="redirectToRegularization()">{{'Regularization '| translate}}
-    </button>
+   
     <div class="addbtn">
       <div layout="row" class="userlist ">{{' Self Attendance List' | translate}}
 
@@ -40,7 +39,7 @@
           <th class="col-xs-2">{{ 'Total Hours Required ' | translate }}</th>
           <th class="col-xs-2">{{ 'Total Hours Worked ' | translate }}</th>
           <th class="col-xs-2">{{ 'Total Holidays in Month ' | translate }}</th>
-
+       
         </tr>
       </thead>
       <tr *ngFor="let attework of attendanceWorkInfo ">
@@ -48,7 +47,7 @@
         <td>{{attework.totalHoursReq}}</td>
         <td>{{attework.totalHoursWorked}}</td>
         <td>{{attework.totalHolidayinMonth}}</td>
-
+        
       </tr>
     </table>
     <table class="table table-striped table-hover table-fixed settable" [mfData]="allAttendance" #mf="mfDataTable">
@@ -61,7 +60,8 @@
           <th class="col-xs-2" style="margin-right: -20px;">
             <mfDefaultSorter by="date" class="col-xs-2">{{ 'Date' | translate }}</mfDefaultSorter>
           </th>
-          <th class="col-xs-3">{{ 'Status' | translate }}</th>
+         
+          <th class="col-xs-3">Action</th>
 
         </tr>
       </thead>
@@ -71,8 +71,14 @@
         <td class="tablerow col-xs-2">{{attendance.intime}}</td>
         <td class="tablerow col-xs-2">{{attendance.outtime}}</td>
         <td class="tablerow  col-xs-2" style="margin-right: -20px;">{{attendance.date}}</td>
-        <td class="tablerow  col-xs-3">{{attendance.status}}</td>
-
+    
+        <td   class="col-xs-3">
+          <div>
+            
+            <button class="btn btn-primary adduser" type="button" (click)="redirectToRegularization()">{{'Regularization '| translate}}
+            </button>
+          </div>
+        </td>
       </tr>
       <div id="data" class="norequest"></div>
     </table>
