--- a/src/styles.css
+++ b/src/styles.css
@@ -105,10 +105,12 @@
 }
 
 #snackbar {
+    margin-top: -100px;
+    height: 50px;
     z-index: 1;
     visibility: hidden;
     min-width: 450px;
-    margin-left: 100px;
+    margin-left: 150px;
     background-color: #333;
     color: #fff;
     text-align: center;
@@ -116,7 +118,6 @@
     padding: 16px;
     position: fixed;
     z-index: 1;
-    top: -50px;
     left: 50%;
     font-size: 17px;
 }
