--- a/src/app/components/usertype-pageassociation/usertype-pageassociation.component.html
+++ b/src/app/components/usertype-pageassociation/usertype-pageassociation.component.html
@@ -6,7 +6,7 @@
     </header>
 
     <div class="addbtn">
-      <button class="btn btn-primary adduser" type="button" data-toggle="modal" data-target="#myModal">{{'UserType Page Association' | translate}}
+      <button class="btn btn-primary adduser" type="button" data-toggle="modal" data-target="#myModal"(click)="clearForm();">{{'UserType Page Association' | translate}}
       </button>
 
     </div>
