--- a/src/app/components/attendance/attendance.component.html
+++ b/src/app/components/attendance/attendance.component.html
@@ -63,7 +63,7 @@
 </div>
 
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <form [formGroup]="attendanceForm" (ngSubmit)="onEmployeeAttendanceFormSubmit()">
+    <form [formGroup]="attendanceForm" (ngSubmit)="onEmployeeAttendanceFormSubmit();">
       <div class="modal-dialog modaldialog">
 
         <div class="modal-content">
@@ -111,7 +111,7 @@
 
             <div class="savebtn">
               <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!attendanceForm.valid" (click)="validate(); displayToastMessage();"
-                [ngStyle]="{'display':display}">{{'Save'|translate}}</button>
+                >{{'Save'|translate}}</button>
               <button type="button" class="btn btn-secondary" data-dismiss="modal" style="width: 30%;
       margin-left: 20px;">{{'Close'|translate}}</button>
             </div>
