--- a/src/app/components/department/department.component.html
+++ b/src/app/components/department/department.component.html
@@ -4,7 +4,7 @@
       <div class="heading4">{{'Department'|translate}}</div>
     </header>
     <div class="addbtn">
-      <button class="btn btn-primary adduser" type="button" data-toggle="modal" data-target="#myModal">{{'Add New Department'|translate}}
+      <button class="btn btn-primary adduser" type="button" data-toggle="modal" data-target="#myModal"(click)="clearForm()">{{'Add New Department'|translate}}
       </button>
       <div class="input-group input-group-lg searchButton">
         <input type="text" class="form-control" style="height: 40px" placeholder="Search By Name" [(ngModel)]="name">
