--- a/src/app/components/page/page.component.html
+++ b/src/app/components/page/page.component.html
@@ -6,7 +6,7 @@
     </header>
 
     <div class="addbtn">
-      <button class="btn btn-primary adduser" type="button" data-toggle="modal" data-target="#myModal">{{'Add New Page'| translate}}
+      <button class="btn btn-primary adduser" type="button" data-toggle="modal" data-target="#myModal"(click)="clearForm();">{{'Add New Page'| translate}}
       </button>
 
     </div>
