--- a/src/app/components/approvals/approvals.component.css
+++ b/src/app/components/approvals/approvals.component.css
@@ -33,3 +33,9 @@
     margin-top: 20px;
     font-size: 30px;
 }
+
+.requestName{
+    margin-left: 20px;
+    padding: 20px;
+    border-bottom: 1px solid #e9e9e9;
+}
