--- a/src/app/components/resetpassword/resetpassword.component.html
+++ b/src/app/components/resetpassword/resetpassword.component.html
@@ -1,4 +1,6 @@
+
 <form [formGroup]="userForm" (submit)="onResetPasswordFormSubmit()">
+    
   <div class="container" style="margin-top: 100px ">
     <div class=" form-control " style="margin-left: 400px;width: 300px;height: 400px ;border: 1px solid transparent;">
       <h2 align="center" style="color:#45aed6;;">Reset Password</h2>
@@ -18,7 +20,6 @@
         <app-control-messages [formGroup]="userForm" [displayName]="'password'" [control]="userForm.controls['password']"></app-control-messages>
       </div>
 
-
       <div>
         <a class="reset" href="index.html" style="position: relative; overflow: hidden;">Back To Login</a>
       </div>
@@ -31,3 +32,4 @@
 
   </div>
 </form>
+<div id="snackbar" [innerHTML]="toastMessage"></div>
