--- a/src/app/components/resetpassword/resetpassword.component.css
+++ b/src/app/components/resetpassword/resetpassword.component.css
@@ -57,10 +57,12 @@ display: inline-block;
         margin-left: 25px;
     }
     #snackbar {
+        margin-top: -100px;
+        height: 50px;
         z-index: 1;
         visibility: hidden;
-        min-width: 250px;
-        margin-left: 200px;
+        min-width: 450px;
+        margin-left: 150px;
         background-color: #333;
         color: #fff;
         text-align: center;
@@ -68,8 +70,7 @@ display: inline-block;
         padding: 16px;
         position: fixed;
         z-index: 1;
-        top: 70px;
-        left: 60%;
+        left: 50%;
         font-size: 17px;
     }
     
