<upload excel data>

--- a/src/app/components/attendance/attendance.component.css
+++ b/src/app/components/attendance/attendance.component.css
@@ -69,3 +69,11 @@ butHeight{
     border-radius: 50%;
     margin-left: 15px;
 }
+.uploadExcel{
+    margin-left: 20px;
+    padding: 10px;
+}
+.uploadBtn{
+    margin-left: 50%;
+    margin-top: -60px;
+}
