--- a/src/app/components/approvals/approvals.component.html
+++ b/src/app/components/approvals/approvals.component.html
@@ -62,6 +62,36 @@
       </tr>
     </table>
     <div id="data1" class="norequest"></div>
+
+    <div class="row requestName" style="border-bottom: 1px solid #e9e9e9">
+      <div class="heading4">{{'Request for Project'|translate}}</div>
+    </div>
+    <div id="snackbar" [innerHTML]="toastMessage"></div>
+    <table class="table  table-hover table-bordered ">
+      <thead>
+        <tr>
+          <th class="col-xs-2">Name</th>
+          <th class="col-xs-2">{{ 'Start Date' | translate }}</th>
+          <th class="col-xs-2">{{ 'End Date' | translate }}</th>
+          <th class="col-xs-2">{{ 'Project Type' | translate }}</th>
+          <th class="col-xs-3">Action</th>
+        </tr>
+      </thead>
+      <tr *ngFor="let project of allProject ;let i = index">
+        <td>{{project.name}} </td>
+        <td>{{project.startDate}}</td>
+        <td>{{project.endDate}}</td>
+        <td>{{project.projecttype}}</td>
+        <td (click)="onSelect($event.target.value,project.id );onSubmitProjectApprovalStatus()" data-toggle="modal" data-target="#myModal">
+          <div>
+            <button type="button" class="btn btn-secondary" value="Approved">{{'Approved'|translate}}</button>
+            <button type="button" style="margin-left: 30px;" class="btn btn-secondary" value="Reject">{{'Rejected'|translate}}</button>
+          
+          </div>
+        </td>
+      </tr>
+    </table>
+    <div id="data1" class="norequest"></div>
   </div>
 </div>
 <div class="modal fade" id="myModal" role="dialog">
