--- a/src/app/components/usertype-pageassociation/usertype-pageassociation.component.html
+++ b/src/app/components/usertype-pageassociation/usertype-pageassociation.component.html
@@ -6,27 +6,26 @@
     </header>
     <div id="snackbar" [innerHTML]="toastMessage"></div>
     <div class="addbtn">
-      <button class="btn btn-primary adduser" type="button" data-toggle="modal" data-target="#myModal"(click)="clearForm();">{{'UserType Page Association' | translate}}
+      <button class="btn btn-primary adduser" type="button" data-toggle="modal" data-target="#myModal" (click)="clearForm();">{{'User Type Page Association' | translate}}
       </button>
 
     </div>
     <div layout="row" class="userlist " (load)="startLoadingSpinner()">{{'Pages List' | translate}}</div>
 
     <br>
-  
-    <table class="table table-striped table-hover table-fixed settable" >
+
+    <table class="table table-striped table-hover table-fixed settable">
       <thead>
         <tr>
           <th class="col-xs-2">{{ 'No' | translate }}</th>
-          <th class="col-xs-2">User Type
-          </th>
+          <th class="col-xs-2">{{'User Type'| translate}}</th>
           <th class="col-xs-3">{{ 'Page' | translate }}</th>
           <th class="col-xs-2">{{ 'Url' | translate }}</th>
-          
-          <th class="col-xs-3">Action</th>
+
+          <th class="col-xs-3">{{'Action' | translate}}</th>
         </tr>
       </thead>
-      <tr *ngFor="let pageAsso of allPageAssoList|paginate: { itemsPerPage: 8, currentPage: p} let i= index">
+      <tr *ngFor="let pageAsso of allPageAssoList |filter :date | paginate: { itemsPerPage: 8, currentPage: p} let i= index">
         <td class="tablerow col-xs-2">{{i+1}}</td>
         <td class="tablerow col-xs-2">{{pageAsso.usertypeId.usertypeName}}</td>
         <td class="tablerow col-xs-3">{{pageAsso.page.pageName}}</td>
@@ -40,14 +39,13 @@
       </tr>
     </table>
     <div style="margin-left: 60%">
-        <pagination-controls (pageChange)="p = $event"></pagination-controls>
-      </div>
+      <pagination-controls (pageChange)="p = $event"></pagination-controls>
+    </div>
   </div>
 </div>
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <form [formGroup]="pageAssoForm" (ngSubmit)="onPageAssoFormSubmit()">
     <div class="modal-dialog modaldialog">
- 
       <div class="modal-content">
         <div class="modal-header dialog">
           <button type="button" class="close modalCloseIcon" data-dismiss="modal">&times;</button>
@@ -92,11 +90,11 @@
               </tr>
             </thead>
             <tbody style="height: 80px">
-            <tr *ngFor="let pageAsso of pageAssoIdData | paginate: { itemsPerPage: 8, currentPage: p} let i = index;">
-              <td class="tablerow col-xs-6">{{i+1}}</td>
-              <td class="tablerow col-xs-6  ">{{pageAsso}}</td>
-            </tr>
-          </tbody>
+              <tr *ngFor="let pageAsso of pageAssoIdData | paginate: { itemsPerPage: 8, currentPage: p} let i = index;">
+                <td class="tablerow col-xs-6">{{i+1}}</td>
+                <td class="tablerow col-xs-6  ">{{pageAsso}}</td>
+              </tr>
+            </tbody>
           </table>
           <div class="savebtn">
             <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!pageAssoForm.valid" (click)="displayToastMessage();">{{'Save'|translate}}</button>
