--- a/src/app/components/notification/notification.component.html
+++ b/src/app/components/notification/notification.component.html
@@ -15,7 +15,8 @@
           <th class="col-xs-2">{{ 'In Time' | translate }}</th>
           <th class="col-xs-2">{{ 'Out Time' | translate }}</th>
           <th class="col-xs-2">{{ 'Total Time' | translate }}</th>
-          <th class="col-xs-3">{{ 'Date' | translate }}</th>
+          <th class="col-xs-2">{{ 'Date' | translate }}</th>
+          <th class="col-xs-2">{{ 'Action' | translate }}</th>
         </tr>
       </thead>
       <tr *ngFor="let attendance of allAttendance | paginate: { itemsPerPage: 8, currentPage: p} ;let i = index">
@@ -23,7 +24,11 @@
         <td class="tablerow col-xs-2">{{attendance.intime}}</td>
         <td class="tablerow col-xs-2">{{attendance.outtime}}</td>
         <td class="tablerow col-xs-2">{{attendance.totaltime}}</td>
-        <td class="tablerow col-xs-3">{{attendance.date}}</td>
+        <td class="tablerow col-xs-2">{{attendance.date}}</td>
+        <td class="tablerow col-xs-2">
+          
+          <button type="button" class="btn btn-secondary" (click)="deleteLeave(leave.id)">{{'Close'|translate}}</button>
+        </td>
       </tr>
     </table>
     <div id="data" class="norequest"></div>
@@ -37,15 +42,49 @@
     <table class="table table-striped table-hover table-fixed settable">
       <thead>
         <tr>
-          <th class="col-xs-4">EmployeeId</th>
-          <th class="col-xs-4">{{ 'Date' | translate }}</th>
-          <th class="col-xs-4">{{ 'Status' | translate }}</th>
+          <th class="col-xs-3">EmployeeId</th>
+          <th class="col-xs-3">{{ 'Date' | translate }}</th>
+          <th class="col-xs-3">{{ 'Status' | translate }}</th>
+          <th class="col-xs-3">{{ 'Action' | translate }}</th>
         </tr>
       </thead>
       <tr *ngFor="let attendance of allAbsentAttendance | paginate: { itemsPerPage: 8, currentPage: p} ;let i = index">
-        <td class="tablerow col-xs-4">{{attendance.employee.userid}} </td>    
-        <td class="tablerow col-xs-4">{{attendance.date}}</td>
-        <th class="tablerow col-xs-4">{{ attendance.status}}</th>
+        <td class="tablerow col-xs-3">{{attendance.employee.userid}} </td>    
+        <td class="tablerow col-xs-3">{{attendance.date}}</td>
+        <td class="tablerow col-xs-3">{{ attendance.status}}</td>
+        <td class="tablerow col-xs-3">
+          
+          <button type="button" class="btn btn-secondary" (click)="deleteLeave(leave.id)">{{'Close'|translate}}</button>
+        </td>
+      </tr>
+    </table>
+    <div id="data" class="norequest"></div>
+    <div style="margin-left: 60%">
+      <pagination-controls (pageChange)="p = $event"></pagination-controls>
+    </div>
+
+    <div class="row requestName" style="border-bottom: 1px solid #e9e9e9">
+      <div class="heading4">{{'Notification for assign task to his sub ordinate '|translate}}</div>
+    </div>
+    <div id="snackbar" [innerHTML]="toastMessage"></div>
+    <table class="table table-striped table-hover table-fixed settable">
+      <thead>
+        <tr>
+          <th class="col-xs-3">EmployeeId</th>
+          <th class="col-xs-3">{{ 'Date' | translate }}</th>
+          <th class="col-xs-3">{{ 'Task Name' | translate }}</th>
+          <th class="col-xs-3">{{ 'Action' | translate }}</th>
+          
+        </tr>
+      </thead>
+      <tr *ngFor="let task of dailyTask | paginate: { itemsPerPage: 8, currentPage: p} ;let i = index">
+        <td class="tablerow col-xs-3">{{task.employee.userid}} </td>    
+        <td class="tablerow col-xs-3">{{task.date}}</td>
+        <td class="tablerow col-xs-3">{{ task.taskName}}</td>
+        <td class="tablerow col-xs-3">
+          
+          <button type="button" class="btn btn-secondary" (click)="deleteLeave(leave.id)">{{'Close'|translate}}</button>
+        </td>
       </tr>
     </table>
     <div id="data" class="norequest"></div>
